refactor: standardize logging and improve code consistency across handlers and services
- Replace System.out.println() calls with proper logger usage throughout handlers and services
- Update logging statements to use consistent formatting and appropriate log levels
- Improve code readability by standardizing import organization and formatting
- Remove unused imports and clean up deprecated code patterns
- Enhance maintainability by aligning logging practices with framework standards
- Update scheduler implementations to use logger instead of direct output
- Standardize logging in repository, service, and infrastructure layers
- Ensure consistent error handling and debug logging across all components